refactor: 특정 슬롯에 배정 가능한 지원자/이미 배정된 지원자 조회를 root recruitment 기반으로 통합